tests/lime/fail/tokens/macro_rest/byte_47.wsa
macro m/ [push 47] m/
